# chatapp_django

./: .dockerignore  .env_example  .flake8  .gitignore  Dockerfile  Makefile  Pipfile  README.md  docker-compose.yml  pyproject.toml
accounts/: admin.py  fields.py  models.py  serializers.py  services.py  urls.py  views.py
accounts/migrations/: 0001_created_custom_user_model.py  0001_created_user_model.py
accounts/tests/: test_models.py  test_serializers.py  test_views.py
chat/: fields.py  models.py  serializers.py  services.py  urls.py  views.py
chat/migrations/: 0001_created_room_and_room_member_model.py
chat/tests/: test_models.py  test_serializers.py  test_services.py  test_views.py
chat_rooms/: apps.py  models.py  serializers.py  services.py  urls.py  views.py
chat_rooms/migrations/: 0001_created_room_and_room_member_model.py
chat_rooms/tests/: test_models.py  test_serializers.py  test_services.py  test_views.py
chatapp/: settings.py  urls.py
posts/: models.py  serializers.py  services.py  urls.py  views.py
posts/migrations/: 0001_created_post_model.py
posts/tests/: test_serializers.py  test_services.py  test_views.py
tests/accounts/: test_models.py  test_serializers.py  test_views.py
utils/: validations.py
