[tool.poetry]
name = "chatapp"
version = "0.1.0"
description = "for chatapp configuration"
authors = ["test user"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"
black = "23.3.0"
django = "4.2.1"
djangorestframework = "3.14.0"
flake8 = "6.0.0"
mypy = "1.3.0"
mysqlclient = "2.1.1"
isort = "5.12.0"
pytest = "7.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.pytest]
testpaths = ["*/tests.py"]
